# KinexonHandballAPI

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASING.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  tests.yml
config/: teams.yaml
openapi/: config.yaml  sports_app.json
scripts/: codegen.ps1  codegen.sh  rename_operation_ids.py
src/_vendor/kinexon_client/: __init__.py
src/_vendor/kinexon_client/api/available_metrics_and_events/: get_public_v1_statistics_list.py  get_statistics_list_deprecated.py
src/_vendor/kinexon_client/api/categories_and_thresholds/: get_public_v1_statistics_by_session_id_categories.py  get_statistics_by_session_id_categories_deprecated.py
src/_vendor/kinexon_client/api/events/: get_events_count_per_event_type_player_players_time_entity_type_time_entity_identifier.py  get_events_event_type_player_players_time_entity_type_time_entity_identifier.py  get_public_v_1_events_count_per_event_type_player_players_time_entity_type_time_entity_identifier.py  get_public_v_1_events_event_type_player_players_time_entity_type_time_entity_identifier.py
src/_vendor/kinexon_client/api/exports/: get_export_inertial_session_by_time_entity_identifier_deprecated.py  get_export_positions_session_by_time_entity_identifier_deprecated.py  get_public_v1_export_inertial_session_by_time_entity_identifier.py  get_public_v1_export_positions_session_by_time_entity_identifier.py
src/_vendor/kinexon_client/api/players/: get_public_v1_sensor_assignment_by_time_entity_identifier.py  get_public_v1_teams_by_team_id_players.py  get_public_v1_teams_by_team_id_players_by_player_id.py  get_sensor_assignment_by_time_entity_identifier_deprecated.py  get_teams_by_team_id_players_by_player_id_deprecated.py  get_teams_by_team_id_players_deprecated.py
src/_vendor/kinexon_client/api/sessions_and_phases/: get_public_v1_teams_by_team_id_sessions_and_phases.py  get_teams_by_team_id_sessions_and_phases_deprecated.py
src/_vendor/kinexon_client/api/statistics/: get_public_v1_statistics_by_type_by_player_id_by_time_entity_range_type.py  get_public_v1_statistics_by_type_by_player_id_by_time_entity_type_by_time_entity_identifier.py  get_statistics_by_type_by_player_id_by_time_entity_range_type_deprecated.py  get_statistics_by_type_by_player_id_by_time_entity_type_by_time_entity_identifier_deprecated.py
src/_vendor/kinexon_client/models/: __init__.py  event_acceleration.py  event_acceleration_acceleration_category.py  event_ball_contact.py  event_ball_possession.py  event_ball_possession_lost.py  event_ball_possession_recovery.py  event_change_of_direction.py  event_change_of_direction_direction.py  event_change_of_orientation.py  event_change_of_pace.py  event_change_of_pace_change_of_pace_category.py  event_corner_kick.py  event_corner_kick_corner_kick_category.py  event_count.py  event_counter_attack.py  event_cut.py  event_cut_direction.py  event_cv_shot.py  event_cv_shot_shot_load_category.py  event_deceleration.py  event_deceleration_deceleration_category.py  event_defence.py  event_detected_cross.py  event_detected_cross_detected_cross_category.py  event_detected_offside_soccer.py  event_detected_pass.py  event_detected_pass_type.py  event_detected_shot_basketball.py  event_detected_shot_basketball_shot_made.py  event_detected_shot_fifa.py  event_detected_shot_handball.py  event_detected_shot_ice_hockey.py  event_detected_shot_ice_hockey_shot_made.py  event_detected_shot_intelligence_court.py  event_detected_shot_intelligence_court_detected_shot_intelligence_court_category.py  event_detected_shot_soccer.py  event_dfl_corner_kick.py  event_dfl_corner_kick_dfl_corner_kick_category.py  event_dfl_cross.py  (+108 more)
src/kinexon_handball_api/: __init__.py  api.py  client.py  config.py  exceptions.py  fetchers.py  handball.py
src/kinexon_handball_api/config/: teams.yaml
test/: test_auth.py  test_auth_integration.py  test_handball_integration.py
tests/: conftest.py  test_client.py  test_integration_api_status.py  test_integration_extract_game.py  test_integration_session_ids.py
