[project]
name = "kinexon-handball-api"
version = "0.1.0"
description = "A Python wrapper for accessing and processing Kinexon Handball data."
authors = [
    { name = "Michael Adams", email = "m@ad4ms.de" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

# Core dependencies
dependencies = [
    "httpx>=0.27.0", # generated client uses httpx
    "pydantic>=2.6", # generated models target Pydantic v2
    "typing-extensions>=4.8", # safety on older 3.10
    "pandas>=2.2.2", # your wrapper/processing
    "python-dotenv>=1.1.0",
    # requests no longer required (httpx covers auth handling)
    "pytest>=8.4.2",
    "pytest-order>=1.3.0",
    "attrs>=25.3.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
]

# Project metadata
keywords = ["handball", "kinexon", "api", "data", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=5.0",
    "requests-mock>=1.12",
    "ruff>=0.12.5",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.31.0",
    "pre-commit>=4.5.1",
]

lint = [
    "ruff>=0.12.5",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/mad4ms/KinexonHandballAPI"
Repository = "https://github.com/mad4ms/KinexonHandballAPI"
Issues = "https://github.com/mad4ms/KinexonHandballAPI/issues"

# Build system
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "src/_vendor"]

[tool.setuptools.package-data]
"kinexon_handball_api" = ["config/*.yaml", "config/*.yml"]

# =============================================================================
# Code Quality Tools Configuration
# =============================================================================

# Ruff - Linting/formatting
[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "src/_vendor/kinexon_client",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"

# mypy - Type checking
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# pytest - Testing
[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test (requires live API access)",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
